--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/mediaquery.css">
   <title>Frontend Mentor | Fylo data storage component</title>
-
 </head>
 <body>
   <main>
-    <section>
+    <section class="data-chart">
+			<h2 style="display: none">test</h2>
       <div class="container">
         <div class="cloud-function bg">
           <div class="logo"><a href="#"><img src="images/logo.svg" alt="company logo"></a></div>
@@ -39,9 +39,5 @@
       </div>
     </section>
   </main>  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
